Bug #11129
libtnfprobe: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
In file included from /code/illumos-gate/proto/root_i386/usr/include/iso/stdio_iso.h:53:0, from /code/illumos-gate/proto/root_i386/usr/include/stdio.h:82, from ../trace_init.c:40: /code/illumos-gate/proto/root_i386/usr/include/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../trace_init.c:79:2: note: in expansion of macro 'NULL' NULL ^~~~ /code/illumos-gate/proto/root_i386/usr/include/sys/null.h:32:14: note: (near initialization for '__tnfw_b_control_local.tnf_pid') #define NULL ((void *)0) ^ ../trace_init.c:79:2: note: in expansion of macro 'NULL' NULL ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit d03c6e695aa047219c5b8a31d9b7d2f4ce431765
commit d03c6e695aa047219c5b8a31d9b7d2f4ce431765 Author: Toomas Soome <tsoome@me.com> Date: 2019-07-03T05:33:35.000Z 11129 libtnfprobe: NULL pointer errors Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Richard Lowe <richlowe@richlowe.net>