11129 libtnfprobe: NULL pointer errors Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Richard Lowe <richlowe@richlowe.net>